@@ -416,9 +416,11 @@ static void pick_up_object (object *pl, object *op, object *tmp, int nrof)
     }
     query_name(tmp, name, MAX_BUF);
 
-    if(QUERY_FLAG(tmp, FLAG_UNPAID))
-	snprintf(buf, sizeof(buf), "%s will cost you %s.", name,
-		query_cost_string(tmp,pl,F_BUY | F_SHOP));
+    if(QUERY_FLAG(tmp, FLAG_UNPAID)) {
+        char* value = stringbuffer_finish(query_cost_string(tmp, pl,F_BUY | F_SHOP, NULL));
+        snprintf(buf, sizeof(buf), "%s will cost you %s.", name, value);
+        free(value);
+    }
     else
 	snprintf(buf, sizeof(buf), "You pick up the %s.", name);
 
@@ -1526,19 +1528,27 @@ void examine(object *op, object *tmp) {
     in_shop = is_in_shop(op);
 
     if (tmp->value && !QUERY_FLAG(tmp, FLAG_STARTEQUIP) && !QUERY_FLAG(tmp, FLAG_NO_PICK)) {
-    	snprintf(buf, sizeof(buf), "You reckon %s worth %s.",
-		    tmp->nrof>1?"they are":"it is",query_cost_string(tmp,op,F_SELL | F_APPROX));
+        char* value = stringbuffer_finish(query_cost_string(tmp,op,F_SELL | F_APPROX, NULL));
+        snprintf(buf, sizeof(buf), "You reckon %s worth %s.",
+            tmp->nrof>1?"they are":"it is",value);
+        free(value);
 	draw_ext_info(NDI_UNIQUE, 0,op, MSG_TYPE_COMMAND, MSG_TYPE_COMMAND_EXAMINE,
 		      buf, NULL);
 	if (in_shop) {
-	    if(QUERY_FLAG(tmp, FLAG_UNPAID))
-	    	snprintf(buf, sizeof(buf), "%s would cost you %s.",
-		    tmp->nrof>1?"They":"It",query_cost_string(tmp,op,F_BUY | F_SHOP));
-	    else
-	    	snprintf(buf, sizeof(buf), "You are offered %s for %s.",
-		    query_cost_string(tmp,op,F_SELL+F_SHOP), tmp->nrof>1?"them":"it");
+	    if(QUERY_FLAG(tmp, FLAG_UNPAID)) {
+                value = stringbuffer_finish(query_cost_string(tmp,op,F_BUY | F_SHOP, NULL));
+                snprintf(buf, sizeof(buf), "%s would cost you %s.",
+                    tmp->nrof>1?"They":"It", value);
+                free(value);
+            }
+	    else {
+                value = stringbuffer_finish(query_cost_string(tmp,op,F_SELL+F_SHOP, NULL));
+                snprintf(buf, sizeof(buf), "You are offered %s for %s.",
+                    value, tmp->nrof>1?"them":"it");
+                free(value);
+            }
 	    draw_ext_info(NDI_UNIQUE, 0,op, MSG_TYPE_COMMAND, MSG_TYPE_COMMAND_EXAMINE,
-			  buf, NULL);
+                buf, NULL);
 	}
     }
 
